# t1-t2-protocol

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  SECURITY.md  pyproject.toml  server.json
.github/: TOPICS.md
.github/ISSUE_TEMPLATE/: bug_report.yml  enhancement.yml
.github/workflows/: ci.yml  cleanup-legacy-releases.yml  publish.yml  release.yml
docs/: caller-protocol.md  caller-protocol.zh.md  philosophy.md  philosophy.zh.md
examples/: full-pipeline.md  full-pipeline.zh.md  t1-basic.md  t1-basic.zh.md  t2-basic.md  t2-basic.zh.md
src/: t1_t2_mcp_server.py
tests/: conftest.py  test_checksum.py  test_locale.py  test_mcp_stdio.py  test_weight_hints.py
